<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_06"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPiza"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                android:src="@drawable/pizza"
                android:visibility="gone" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pizzaName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivPiza"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="Non - Veg Pizza" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/dot"
                    android:visibility="gone"
                    android:textColor="@color/green"
                    android:textSize="40sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pizzaDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pizzaName"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:textSize="13sp"
                tools:text="Non - Veg Pizza Non - Veg Pizzav Non - Veg Pizza Non - Veg PizzaNon - Veg Pizza" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCustomizePizza"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/pizzaDes"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/customize_a_pizza"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/plus"
                    android:textColor="@color/green"
                    android:textSize="25sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRemovePizzaFromCart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/pizzaDes"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/remove_a_pizza"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/minus"
                    android:textColor="@color/red"
                    android:textSize="35sp" />
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rlShowCart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:background="@color/purple_200"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            tools:text="Total Items     20" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTotalItem"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            tools:text="Rs 200" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_black" />

    </RelativeLayout>
</RelativeLayout>
</layout>